--- a/View/BelleMiddleView.xib
+++ b/View/BelleMiddleView.xib
@@ -13,7 +13,7 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" userLabel="Middle View" customClass="BelleMiddleView">
             <rect key="frame" x="0.0" y="0.0" width="65" height="65"/>
-            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tabbar_np_shadow" translatesAutoresizingMaskIntoConstraints="NO" id="F97-un-ICI">
                     <rect key="frame" x="0.0" y="0.0" width="65" height="65"/>
@@ -32,7 +32,7 @@
                     <state key="normal" image="tabbar_np_play"/>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="wxB-ko-Kxd" secondAttribute="bottom" constant="11" id="034-V9-Yta"/>
                 <constraint firstAttribute="bottom" secondItem="aNp-Gn-n0V" secondAttribute="bottom" constant="10" id="2Hx-0e-h8J"/>
